# PlayableAds-GameMaker

./: .gitignore  PRD.md  README.md  database_design.md  mock-data.sql  package-lock.json  schema.sql  template-data.sql  todolist.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  routes_projects.py  routes_templates.py
backend/templates/image-puzzle/: config.js  index.html  main.js  styles.css
backend/templates/image-puzzle/assets/audios/: README.txt
backend/templates/memory-pick/: config.js  index.html  main.js  styles.css
backend/templates/whack-a-mole/: config.js  index.html  main.js  styles.css
backend/templates/whack-a-mole/assets/audios/: README.txt
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/public/templates/memory_001/: index.html
frontend/public/templates/puzzle_001/: index.html
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/projects/: route.ts
frontend/src/app/api/projects/[id]/: route.ts
frontend/src/app/api/templates/: route.ts
frontend/src/app/api/templates/[id]/: route.ts
frontend/src/app/editor/[projectId]/: layout.tsx  page.tsx
frontend/src/app/editor/[projectId]/export/: page.tsx
frontend/src/app/templates/: page.tsx
frontend/src/app/templates/[id]/: page.tsx
frontend/src/components/: asset-original-info.tsx  device-frame.tsx  editor-steps.tsx  increment-stat.tsx  navbar.tsx  start-customization-button.tsx
frontend/src/lib/: api.ts  validation.ts
frontend/src/mock/: templates.ts
frontend/src/types/: index.ts
(+6 files in other folders)
