[project]
name = "playableads-backend"
version = "0.1.0"
description = "FastAPI backend for PlayableAds"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "SQLAlchemy==2.0.30",
  "pymysql==1.1.1",
  "python-multipart==0.0.9",
  "pydantic==2.7.4",
]

[project.scripts]
serve = "app.__main__:main"

[tool.uv]
index-url = "https://pypi.org/simple"
